--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,7 @@ python = "3.8"
 ansible = "*"
 
 [tool.poetry.dev-dependencies]
+grip = "^4.5.2"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
